--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.7",
+    "next": "^15.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-masonry-css": "^1.0.16"
@@ -20,7 +20,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "^15.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
